2010-03-06	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* autogen.sh: Changed == (which is a bashism) into = for test.
	* shapes/glshape.*: Fixed MacOS X PPC compilation error.

2010-03-08 Dominik Reichardt <dominus@users.sourceforge.net>
	* README, /docs/*: updated Documentation, fixed the xml makefile to do proper cases
	* /data/credits.txt: fixed typo in Jakob Schonberg's name
	* README.MacOSX: additional information for compiling and running Exult Studio on OS X
	
2010-03-07 Dominik Reichardt <dominus@users.sourceforge.net>
	* makefile.am: added an option to make dmg-image of the app-bundle and some other files
	* /macosx/DS_Store: added Desktop Services Store file to layout the dmg-image

2010-03-06	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs:
	  #2841677 Cannot close two gumps in succession

2010-03-06 Dominik Reichardt <dominus@users.sourceforge.net>
	* makefile.am: tuned the app bundle a bit, including some of the standard files
	* Info.plist.in: updated copyrights date

2010-03-06	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapes/font.cc: '^' character in conversations/plaques/books/etc. will
	  convert the next character to uppercase. This is needed in the training
	  dialog of Sentri, for example.

2010-03-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* MacOS X: App bundles now use CoreFoundation API to detect resource path
	  instead of it being hard-coded into the application.
	* Fixed bugs:
	  #2962438 The BG and SI credits use the wrong palette
	  #2961649 Party flickers when walking and infravision or invisible

2010-03-04 Ryan Nunn <colourles@users.sourceforge.net>
	* msvcstuff/msvc_kludges.h: Updating to reflect current code
	* version.cc: Added Windows Vista and Windows 7 to the list of detected windows versions

2010-03-03 Dominik Reichardt <dominus@users.sourceforge.net>
	* exult.cc: look for data folder in .app bundle as well on Mac OS X (and changed the copyright date)
	