@@ -1,7 +1,8 @@
 INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../headers -I$(srcdir)/../files	\
 		-I$(srcdir)/../shapes -I$(srcdir)/../audio -I$(srcdir)/../conf	\
 		-I$(srcdir)/../objs -I$(srcdir)/../imagewin -I$(srcdir)/../gumps	\
-		$(SDL_CFLAGS) $(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS)
+		$(SDL_CFLAGS) $(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS) \
+		-DEXULT_DATADIR=\"$(EXULT_DATADIR)\"
 
 noinst_LTLIBRARIES = libgamemgr.la
 
