@@ -1,6 +1,9 @@
 2010-03-06	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* autogen.sh: Changed == (which is a bashism) into = for test.
 	* shapes/glshape.*: Fixed MacOS X PPC compilation error.
+	* gamemgr/*: Games in exult.cfg without a <path> or a <static_path> tags now
+	  default to $prefix/share/exult/gamename in *nix and MacOS X (where $prefix
+	  is /usr/share or /usr/local/share, depending on ./configure options).
 
 2010-03-08 Dominik Reichardt <dominus@users.sourceforge.net>
 	* README, /docs/*: updated Documentation, fixed the xml makefile to do proper cases
